Closed
Bug 1627718
Opened 6 years ago
Closed 6 years ago
Software WebRender doesn't like blits whose sources spill outside the source texture (reftests/text/raster_root_C_8192.yaml)
Categories
(Core :: Graphics: WebRender, defect, P3)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla77
| Tracking | Status | |
|---|---|---|
| firefox77 | --- | fixed |
People
(Reporter: jimb, Assigned: lsalzman)
References
Details
Attachments
(1 file)
reftests/text/raster_root_C_8192.yaml calls blit_render_target_impl with a src_rect with an origin of (146, 146) and a size of 4096x4096, from a source framebuffer that is 4096x4096, which triggers assertions in gl.cc's scale_blit.
| Reporter | ||
Updated•6 years ago
|
Summary: Software WebRender doesn't like blits with sources spill outside the source rectangle (reftests/text/raster_root_C_8192.yaml) → Software WebRender doesn't like blits whose sources spill outside the source rectangle (reftests/text/raster_root_C_8192.yaml)
| Reporter | ||
Updated•6 years ago
|
Summary: Software WebRender doesn't like blits whose sources spill outside the source rectangle (reftests/text/raster_root_C_8192.yaml) → Software WebRender doesn't like blits whose sources spill outside the source texture (reftests/text/raster_root_C_8192.yaml)
Updated•6 years ago
|
Priority: -- → P3
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/72cbd8bb7af3
clamp SWGL scale_blit to valid source and dest regions. r=jimb
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in
before you can comment on or make changes to this bug.
Description
•