Bug 1627718 - clamp SWGL scale_blit to valid source and dest regions. r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D70282

--HG--
extra : moz-landing-system : lando